2010-12-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c, ext/oci8/bind.c, lib/oci8/object.rb,
	  test/test_object.rb: fix a problem to assign NULL bind value
	    to object type bind variables.
	    (reported by Raimonds Simanovskis)
	* ext/oci8/oraconf.rb: fix for 32-bit ruby compiled on
	    x86_64 linux. (reported by Jason Renschler)
	* ext/oci8/oranumber_util.c, test/test_oranumber.rb:
	    suppress warning: unknown conversion type character 'h' in format

2010-09-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/win32.c: undefine boolean to pass compilation on
	    Cygwin. (reported by Don Hill).
	* lib/oci8/encoding-init.rb, lib/oci8/encoding.yml: add a
	    mapping from ZHT16HKSCS to Big5-HKSCS when the latter
	    is available in ruby.

2010-09-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/extconf.rb: suppress warning
	    'use "ruby/util.h" instead of bare "util.h".'
	* test/test_break.rb: make tests insensitive to execution timing.

2010-09-10  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_array_dml.rb: delete workaround code. It now works
	    fine on rubinius head.

2010-09-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8lib.c: Don't use
	    rb_set_end_proc() when it isn't available.
	* ext/oci8/extconf.rb, lib/oci8.rb.in: add RUBY_ENGINE to
	    the C extension library name when RUBY_ENGINE is not "ruby."
	* test/test_array_dml.rb: skip test_array_insert1 on rubinius.
	    This will be enabled after the rubinius issue #445 is fixed.

2010-09-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/ocinumber.c: use rb_intern() to retrieve IDs of '+', '-',
	    '*' and '/' on rubinus.
	* ext/oci8/oradate.c: use rb_call_super() instead of
	    rb_obj_init_copy(), which is not declared in rubinus.

2010-08-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c: fix for rubinius.

2010-08-28  KUBO Takehiro  <kubo@jiubao.org>