@@ -3,3 +3,4 @@ object.rb
 metadata.rb
 oracle_version.rb
 oci8.rb
+properties.rb
